--- a/public/css/acf-product-reviews-public.css
+++ b/public/css/acf-product-reviews-public.css
@@ -1,3 +1,7 @@
+/**
+ * All of the CSS for your public-facing functionality should be
+ * included in this file.
+ */
 .flex-container {
     padding: 0;
     margin: 0;
