--- a/public/css/affiliate-box-public.css
+++ b/public/css/affiliate-box-public.css
@@ -126,6 +126,11 @@ ul {
     padding-left: 1em;
 }
 
+.list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+
 .row {
     display: -ms-flexbox;
     display: flex;
